<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_name"
                android:textSize="18sp"

                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_rectangle_r_8"
                android:hint="@string/name"
                android:textColorHint="@color/с717685"
                android:inputType="text"
                android:paddingStart="16dp"
                android:textColor="@color/black"
                android:maxLength="10"
                android:translationY="3dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textSize="18sp" />

            <com.antonchuraev.becomebetter.views.utils.TimeSelectorView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </com.antonchuraev.becomebetter.views.utils.TimeSelectorView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>

</layout>