<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/newGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_goal"
                android:background="@color/white"
                android:textColor="@color/aston_martin"
                android:textAllCaps="true"
                android:paddingHorizontal="5dp"
                />


            <LinearLayout
                android:id="@+id/llExpandedState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingHorizontal="5dp"

                    android:paddingTop="10dp"
                    android:paddingBottom="35dp"

                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/edName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:hint="@string/enter_goal_name"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/с9FA2B4" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/с9FA2B4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical"

                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:layout_marginBottom="2dp"
                                android:text="введите \nсрок выполенния:"
                                android:textColor="@color/с9FA2B4"
                                android:textSize="20sp" />

                            <EditText
                                android:id="@+id/edDaysCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="-4dp"
                                android:background="@color/white"
                                android:hint="000"
                                android:inputType="number"
                                android:maxLength="3"
                                android:textColor="@color/black"
                                android:textColorHint="@color/с9FA2B4"
                                android:textSize="40sp" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/с9FA2B4"

                            />

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/tvStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingVertical="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="50dp"

                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


</layout>